#141267 fix css attribute, should be overflow:hidden, patch by Junyor

--- a/calendar.css
+++ b/calendar.css
@@ -45,7 +45,7 @@
   }
 .calendar-calendar .inner {
   min-height:5em;
-  overflow:none;
+  overflow:hidden;
 }
 /* hack to make Internet Explorer for Windows display calendar height correctly \*/
 * html .calendar-calendar .inner {
